--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "9a3a200ab1e5b0b2",
+        "id": "38ea2da103d499db",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Nell Nell/待分类/如何从逻辑上说明新冠病毒奥密克戎不是大号流感?.md",
+            "file": "README.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "俄罗斯",
+                "query": "能看穿别人心思的人是什么样的",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Nell Nell/待分类/如何从逻辑上说明新冠病毒奥密克戎不是大号流感?.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,17 +107,17 @@
     "width": 289.5,
     "collapsed": true
   },
-  "active": "9a3a200ab1e5b0b2",
+  "active": "38ea2da103d499db",
   "lastOpenFiles": [
-    "Nell Nell/待分类/如何从逻辑上说明新冠病毒奥密克戎不是大号流感?.md",
     "README.md",
-    "Anonymity/13 - 百年未有之变局/俄乌战争已经进行了一个多月，而我们国内为什么极少有关于前线的视频？.md",
-    "Anonymity/04 - 社科答集/俄罗斯.md",
-    "Anonymity/13 - 百年未有之变局/1170.md",
-    "Anonymity/11 - 新冠/助医策略.md",
-    "摘抄本/待整理_句子摘录.md",
-    "摘抄本/比喻摘录.md",
-    "沙海拾金/来日再看.JPEG",
-    "沙海拾金/现实主义作品.jpg"
+    "Nell Nell/致读者.md",
+    "Nell Nell/待分类/工作的意义.md",
+    "Nell Nell/待分类/创作动力.md",
+    "Nell Nell/待分类/至极浪漫.md",
+    "Nell Nell/待分类/领导问你有空吗，该怎么回答？.md",
+    "Nell Nell/待分类/丧的本质.md",
+    "Nell Nell/待分类/精英教育.md",
+    "Nell Nell/待分类/为什么基督徒在早期相信轮回再生，到中世纪之后就不信了，是有人把《圣经》改了还是有哪位领袖人物突发奇想？.md",
+    "Nell Nell/待分类/如何从逻辑上说明新冠病毒奥密克戎不是大号流感?.md"
   ]
 }
