--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "普京称外部势力干涉乌局势将遭闪电般打击，如何看待普京的警告？.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "dg9",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -56,7 +56,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -76,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "普京称外部势力干涉乌局势将遭闪电般打击，如何看待普京的警告？.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,19 +104,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 289.5
+    "width": 289.5,
+    "collapsed": true
   },
   "active": "367b742d134daaaa",
   "lastOpenFiles": [
-    "README.md",
-    "】.md",
-    "摘抄本/句子摘录.md",
-    "摘抄本/待整理_句子摘录.md",
-    "沙海拾金/历史彩票.jpeg",
-    "沙海拾金/何如不问1.jpg",
-    "沙海拾金/何如不问.jpg",
-    "沙海拾金/慵懒政治.jpeg",
-    "沙海拾金/文采.jpg",
-    "Anonymity/13 - 百年未有之变局/高清透明时代.md"
+    "普京称外部势力干涉乌局势将遭闪电般打击，如何看待普京的警告？.md",
+    "面向第三世界.md",
+    "Anonymity/13 - 百年未有之变局/第二层防线.md",
+    "政审.md",
+    "为什么我们会战胜认知战.md",
+    "历史上有哪些如神一般存在的人物？.md",
+    "当孩子提出无理要求时，家长应该怎么做？.md",
+    "如何看待“福山论为什么乌克兰将赢得战争”？.md",
+    "言论自由.md",
+    "MoneyTalk.md"
   ]
 }
