--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "1fbdbffc7e447cf6",
+        "id": "104ded612cf532fc",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "幼稚权.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -53,8 +56,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -74,6 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "幼稚权.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,17 +106,17 @@
     "width": 289.5,
     "collapsed": true
   },
-  "active": "1fbdbffc7e447cf6",
+  "active": "104ded612cf532fc",
   "lastOpenFiles": [
-    "Anonymity/01 - 家族答集/零起点 1.md",
-    "Anonymity/01 - 家族答集/零起点.md",
-    "Anonymity/01 - 家族答集/观点与事实.md",
-    "Anonymity/01 - 家族答集/行云流水 1.md",
-    "Anonymity/01 - 家族答集/行云流水.md",
-    "Anonymity/01 - 家族答集/获得好感.md",
-    "Anonymity/01 - 家族答集/苦熬 1.md",
-    "Anonymity/01 - 家族答集/苦熬.md",
-    "Anonymity/01 - 家族答集/聪明人.md",
-    "Anonymity/01 - 家族答集/聪明人 1.md"
+    "幼稚权.md",
+    "The Whole Package.md",
+    "历史常识.md",
+    "组织行为.md",
+    "地下芬兰.md",
+    "中间人.md",
+    "外交部表示「美方执意邀请台湾方面，中方无法出席全球抗疫峰会」，这释放了哪些信号？.md",
+    "有眼色.md",
+    "悲观癖.md",
+    "发达中国.md"
   ]
 }
