--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "9ddfa6d2e9b7a498",
+        "id": "2cc04dfaf8c82b42",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "README.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#爱Caritas",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -56,8 +53,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,19 +99,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 289.5
+    "width": 289.5,
+    "collapsed": true
   },
-  "active": "9ddfa6d2e9b7a498",
+  "active": "2cc04dfaf8c82b42",
   "lastOpenFiles": [
     "README.md",
-    "沙海拾金/爱的抱歉.md",
-    "沙海拾金/爱是行动，不易言说.md",
-    "沙海拾金/忘我.jpeg",
-    "沙海拾金/礼貌与尊重4.JPEG",
-    "沙海拾金/慵懒政治.jpeg",
-    "沙海拾金/事实的重量.jpg",
-    "沙海拾金/天赐的休息.jpeg",
-    "Anonymity/04 - 社科答集/MINECRAFT.md",
-    "定规矩.md"
+    "安全感互助.md",
+    "自下人一等.md",
+    "从无到有.md",
+    "老师这样对我我好害怕，我能怎么办？.md",
+    "砸采样点.md",
+    "紧急呼救.md",
+    "父母恩.md",
+    "紧急呼救2.md",
+    "分享.md"
   ]
 }
