--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "摘抄本/句子摘录.md",
+            "file": "README.md",
             "mode": "source"
           }
         }
@@ -76,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "摘抄本/句子摘录.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -108,6 +108,7 @@
   },
   "active": "ece9c2335462f5d1",
   "lastOpenFiles": [
+    "README.md",
     "摘抄本/句子摘录.md",
     "德国人是否开始怀念默克尔？.md",
     "加里宁格勒.md",
@@ -116,7 +117,6 @@
     "四步一没有.md",
     "《互联网跟帖评论服务管理规定（修订草案征求意见稿）》发布，网络跟帖必须先审后发，对网络生态会有何影响？.md",
     "为什么我以真诚之心待人，别人反而会坑我呢？.md",
-    "归去来.md",
-    "诅咒苦难.md"
+    "归去来.md"
   ]
 }
