--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "面向灾难经营.md",
             "mode": "source",
             "source": false
           }
@@ -57,8 +57,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
@@ -78,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "面向灾难经营.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,15 +109,15 @@
   },
   "active": "7ea5f6c3438678db",
   "lastOpenFiles": [
-    "README.md",
-    "Anonymity/01 - 家族答集/休息.md",
-    "刑罚之外.md",
-    "说话的兽.md",
-    "嬉笑的对价.md",
-    "日本前首相安倍晋三胸部中枪，因伤势过重不治身亡，背后原因为何？还有哪些进展值得关注？.md",
-    "自以为是.md",
+    "面向灾难经营.md",
+    "溯溪鞋.md",
+    "华容道.md",
     "你有什么记笔记的小技巧，让笔记变的好看、耐看，愿意去复习？.md",
-    "一个人智商高了有多可怕？.md",
-    "无人机.md"
+    "日本前首相安倍晋三胸部中枪，因伤势过重不治身亡，背后原因为何？还有哪些进展值得关注？.md",
+    "乌克兰军队接下来怎么打合理？.md",
+    "我认为美人计纯属虚构，因为那些人根本不缺美人，怎么可能中美人计呢？.md",
+    "成绩优异，没钱留学只能保国内研究生，而成绩比我差的申到国外好学校，心里难受怎么办？.md",
+    "如何评价越南第二代领导人黎笋？.md",
+    "钟薛高雪糕用火烤不融化，反而烧糊了，用电吹风热风吹不化，是什么原理？.md"
   ]
 }
