--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "c40a8339c21f3adf",
+        "id": "8a0c489af2e02cc3",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "摘抄本/句子摘录.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "既然不求回报是本质的要",
                 "matchingCase": true,
                 "explainSearch": true,
                 "collapseAll": false,
@@ -57,7 +57,8 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -77,7 +78,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "摘抄本/句子摘录.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,20 +105,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 289.5,
-    "collapsed": true
+    "width": 216.66665649414062
   },
-  "active": "c40a8339c21f3adf",
+  "active": "7569597966c86526",
   "lastOpenFiles": [
+    "Anonymity/01 - 家族答集/不抱怨.md",
+    "Anonymity/02 - 企管答集/WhatThen.md",
+    "Anonymity/01 - 家族答集/条理.md",
+    "Anonymity/10 - “就你机灵”系列/CIA的追杀.md",
+    "摘抄本/句子摘录.md",
+    "Anonymity/01 - 家族答集/对事不对人.md",
+    "README.md",
     "沙海拾金/求知1.jpeg",
     "沙海拾金/求知2.jpeg",
-    "沙海拾金/致读者1.jpg",
-    "沙海拾金/膝盖的目的.jpeg",
-    "沙海拾金/能力不足.JPG",
-    "沙海拾金/礼貌与尊重2.jpg",
-    "沙海拾金/礼貌与尊重1.jpeg",
-    "沙海拾金/狂妄.jpg",
-    "沙海拾金/狂妄1.JPG",
-    "沙海拾金/技术性失信.png"
+    "沙海拾金/致读者1.jpg"
   ]
 }
