--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,15 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "da2b92f4d1ef4a7d",
+        "id": "5e8b720bcb890baa",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "README.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -61,7 +57,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 274
+    "width": 375
   },
   "right": {
     "id": "667d5636990656b4",
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -104,19 +99,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 235
+    "width": 171
   },
-  "active": "da2b92f4d1ef4a7d",
+  "active": "4879eced09a10136",
   "lastOpenFiles": [
-    "谈判的底气.md",
-    "三慈善.md",
-    "依法办事.md",
-    "止损点.md",
-    "暗杀.md",
-    "Anonymity/00 - 致读者/致读者 - I.md",
-    "沙海拾金/令人欣慰的事.jpeg",
-    "Anonymity/04 - 社科答集/咄咄逼人.md",
-    "Anonymity/03 - 第一性/后悔的真相.md",
-    "Anonymity/01 - 家族答集/受欢迎.md"
+    "README.md",
+    "认栽.md",
+    "无人私语时.md",
+    "Anonymity/01 - 家族答集/感谢的必要.md",
+    "Anonymity/01 - 家族答集/感动三分钟.md",
+    "Anonymity/01 - 家族答集/愚蠢的不尊重.md",
+    "Anonymity/01 - 家族答集/情绪失控的孩子.md",
+    "Anonymity/03 - 第一性/情感挽回大师.md",
+    "Anonymity/03 - 第一性/情侣话题.md",
+    "Anonymity/01 - 家族答集/悲观与乐观.md"
   ]
 }
