--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -108,15 +108,15 @@
   },
   "active": "4f4d6223bea68a20",
   "lastOpenFiles": [
-    "Anonymity/01 - 家族答集/SOP - 蒸蛋羹.md",
+    "【本周更新】/计较.md",
+    "【本周更新】/再全球化.md",
+    "【本周更新】/不爱交朋友.md",
+    "【本周更新】/BlessingInDisguise.md",
     "README.md",
-    "Anonymity/09 - 神学答集/魔鬼.md",
-    "Anonymity/10 - “就你机灵”系列/骗子.md",
-    "Anonymity/09 - 神学答集/马丁路德.md",
-    "Anonymity/09 - 神学答集/飞天面条神教.md",
-    "Anonymity/08 - 文艺答集/题词.md",
-    "Anonymity/09 - 神学答集/陌生宗教.md",
-    "Anonymity/04 - 社科答集/邪教.md",
-    "Anonymity/08 - 文艺答集/通神.md"
+    "【本周更新】/可谈性.md",
+    "【本周更新】/稳定.md",
+    "Anonymity/10 - “就你机灵”系列/镜子.md",
+    "Anonymity/09 - 神学答集/道与上帝.md",
+    "Anonymity/10 - “就你机灵”系列/网中人.md"
   ]
 }
