--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -11,8 +11,8 @@
   "attachmentFolderPath": "中图法分类/【5 - 社会科学】/550 - 经济",
   "pdfExportSettings": {
     "pageSize": "A4",
-    "landscape": false,
-    "margin": "0",
+    "landscape": true,
+    "margin": "2",
     "downscalePercent": 100
   }
 }
